Update and rename visual/index.html to  visual/index.html

--- a/visual/index.html
+++ b/visual/index.html
@@ -21,8 +21,9 @@
 				<form class="border p-4 mb-" id="form">
 					<div class="form-group">
 						<label>Task</label>
-						<input type="text" class="form-control" id="task" placeholder="Enter task">
+						<input type="text" class="form-control" id="task" placeholder="Enter task"> 
 					</div>
+					aqui estoy yo para cagar este codigo en tu repositorio maldito pero no lo hagas en el mio
 					<div class="form-grup">
 						<label>Description</label>
 						<input type="text" class="form-control" id="description" placeholder="Description">
